small fix on mobile home section

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -47,10 +47,6 @@
         img {
             width: 225px;
         }
-
-        @media (max-width: 1200px) {
-            display: none;
-        }
     }
 
     &_social {
